--- a/MauiApp2/MauiApp2.csproj
+++ b/MauiApp2/MauiApp2.csproj
@@ -56,6 +56,7 @@
 	  <PackageReference Include="SQLitePCLRaw.core" Version="2.1.0" />
 	  <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.0" />
 	  <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.0" />
+	  <PackageReference Include="ZXing.Net.Maui" Version="0.1.0-preview.7" />
 	</ItemGroup>
 
 	<ItemGroup>
